# ogl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: app.c  app.h  main.c  render.c  render.h  shader.c  shader.h  shaders.h  vertexArray.c  vertexBuffer.c  vertexBuffer.h  window.c  window.h
src/game/: block.c  block.h  camera.c  camera.h  chunk.h  fame_time.h  frame_time.c
src/gl/: element_buffer.c  element_buffer.h  glad.c  mesh.c  mesh.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  vertexArray.c  vertexArray.h  vertexBuffer.c  vertexBuffer.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
